--- a/presentation.tex
+++ b/presentation.tex
@@ -17,48 +17,59 @@
 \usepackage{algorithmicx}
 \usetikzlibrary{shapes,arrows}
 \usepackage{fancyvrb}
+
 \newtheorem{rutheorem}{Теорема}
 \newtheorem{ruproof}{Доказательство}
 \newtheorem{rudefinition}{Определение}
 \newtheorem{rulemma}{Лемма}
+
 \beamertemplatenavigationsymbolsempty
 
-\title[Короткое название]{Полный заголовок}
-\subtitle[]{Опциональный подзаголовок}
+% То, что в квадратных скобках, отображается внизу по центру каждого слайда. 
+\title[Короткое название]{Полный официальный заголовок квалификационной работы}
+
 % То, что в квадратных скобках, отображается в левом нижнем углу. 
-\institute[СПбГУ]{
-Санкт-Петербургский государственный университет \\
-Кафедра системного программирования }
+\institute[СПбГУ]{}
 
 % То, что в квадратных скобках, отображается в левом нижнем углу.
-\author[Василий Пупкин]{Василий Иванович Пупкин, 444 группа \\
-  % У научного руководителя должна быть указана научная степень
-  \and  
-    {\bfseries Научный руководитель:} ст.пр. А.А. Андреев \\ 
-  \and % Крнсультанта может и не быть. Должна быть указана должность или ученая степень
-    {\bfseries Консультант:} программист ЗАО ``Зоо'' П.П. Петров \\ 
-  % Для курсовой не обязателен. Должна быть указана должность или ученая степень
-  \and
-    {\bfseries Рецензент:} программист ООО ``Рога и копыта'' И.И. Иванов}
-
-\date{14 августа 2020г.}
-
-\definecolor{orange}{RGB}{179,36,31}
-
+\author[Василий Пупкин]{Василий Иванович Пупкин, 444 группа}
+ 
 \begin{document}
 {
+\setbeamertemplate{footline}{}
 % Лого университета или организации, отображается в шапке титульного листа
 \begin{frame}
-  \begin{center}
-  {\includegraphics[width=1.2cm]{pictures/SPbGU_Logo.png}}
+  \includegraphics[width=1.4cm]{pictures/SPbGU_Logo.png}
+\vspace{-35pt}
+\hspace{-10pt}
+\begin{center}
+   \begin{tabular}{c}
+        \scriptsize{Санкт-Петербургский государственный университет} \\
+        \scriptsize{Кафедра системного программирования}
+    \end{tabular}
+\titlepage
+\end{center}
+
+\btVFill
+
+{\scriptsize
+  % У научного руководителя должна быть указана научная степень
+   {\bfseries Научный руководитель:} к.ф.-м.н. А.А. Андреев, доцент кафедры системного программирования \\
+  % Крнсультанта может и не быть. Должна быть указана должность или ученая степень
+   {\bfseries Консультант:}  П.П. Петров, программист ЗАО ``Компания с ну очень-очень-очень длинным названием''\\
+  % Для курсовой не обязателен. Должна быть указана должность или ученая степень
+   {\bfseries Рецензент:} д.т.н., проф. И.И. Иванов, исполнительный директор ООО ``Рога и копыта''  
+ }
+\begin{center}
+  \vspace{5pt}
+  \scriptsize{Санкт-Петербург\\
+                 2016}
   \end{center}
-  \vspace{-1cm}
-  \titlepage
+
 \end{frame}
 }
 
-\begin{frame}[fragile]
-  \transwipe[direction=90]
+\begin{frame}[fragile]  
   \frametitle{Введение}
   \begin{itemize}
     \item Краткий обзор тематики работы (как вариант --- устно, пока показывается титульный слайд)
@@ -68,8 +79,7 @@
   \end{itemize}
 \end{frame}
             
-\begin{frame}
-  \transwipe[direction=90]
+\begin{frame}  
   \frametitle{Существующие инструменты}
   \begin{itemize}
     \item Перечислить инструменты/подходы, применяемые в области
@@ -89,7 +99,6 @@
 % Обязательный слайд: четкая формулировка цели данной работы и постановка задачи
 % Описание выносимых на защиту результатов, процесса или особенностей их достижения и т.д.
 \begin{frame}
-  \transwipe[direction=90]
   \frametitle{Постановка задачи}
   \textbf{Целью} работы является разработка алгоритма, применимого для того-то  
 
@@ -103,7 +112,6 @@
 \end{frame}
             
 \begin{frame}[fragile]
-\transwipe[direction=90]
 \frametitle{Иллюстративные возможности: таблицы, картинки, код}
 % Задается ширина столбцов
 \begin{tabular}{p{5cm} p{7cm}}
@@ -145,7 +153,6 @@ $$
 \end{frame}
 
 \begin{frame}[fragile]
-  \transwipe[direction=90]
   \frametitle{Формулировки теорем}
   \begin{rutheorem}[Пифагора: геометрическая формулировка]
     В прямоугольном треугольнике площадь квадрата, построенного на гипотенузе, равна сумме площадей квадратов, построенных на катетах.
@@ -164,7 +171,6 @@ $$
 \end{frame}
 
 \begin{frame}[t]
-  \transwipe[direction=90]
   \frametitle{Экспериментальное исследование}
   \begin{itemize}
     \item На каком множестве тестов проводилось экспериментальное исследование
@@ -179,7 +185,6 @@ $$
 
 
 \begin{frame}
-  \transwipe[direction=90]
   \frametitle{Результаты}
   \begin{itemize}
     \item Практически то же, что и на слайде с постановкой задачи, но в совершенной форме --- что делал лично автор
