Small improvements of backup slides.

--- a/presentation.tex
+++ b/presentation.tex
@@ -219,8 +219,11 @@ $$
 
 \begin{frame}
   \frametitle{Второй дополнительный слайд}
+\begin{itemize}
+  \item Много дополнитеьных слайдов не надо: 1--2 вполне достатчно в большинстве случаев
+  \item Кроме формул здесь могут быть схемы, рисунки, таблицы и другие вспомогятельные материалы
+\end{itemize}
 
-Много дополнитеьных слайдов не надо: 1--2 вполне достатчно в большинстве случаев  
   
 \end{frame}
 
