New presentation structure

--- a/presentation.tex
+++ b/presentation.tex
@@ -81,39 +81,59 @@
 \end{frame}
             
 \begin{frame}  
-  \frametitle{Существующие инструменты}
+  \frametitle{Существующие решения (инструменты, подходы, алгоритмы)}
   \begin{itemize}
     \item Перечислить инструменты/подходы, применяемые в области
-    \item Указать их преимущества и недостатки
+    \item Указать их преимущества и недостатки (критика существующих решений/подходов)    
   \end{itemize}
-  
+    
+\end{frame}
+
+\begin{frame}  
+  \frametitle{Существующие решения}
+  Возможно, предметная область сложна и потребуется больше одного слайда, но затягивать введение не стоит. Постарайтесь уложиться в 1--2 слайда
   \begin{itemize}
     \item Выводы
     \begin{itemize}
       \item Подвести итог
       \item Указать недостатки существующих подходов, на борьбу с которыми 
 направленна данная работа
+      \item Чётко сформулировать существующую проблему, которая будет решаться в данной работе
     \end{itemize}
   \end{itemize}
 \end{frame}
+
 
 % Обязательный слайд: четкая формулировка цели данной работы и постановка задачи
 % Описание выносимых на защиту результатов, процесса или особенностей их достижения и т.д.
 \begin{frame}
   \frametitle{Постановка задачи}
-  \textbf{Целью} работы является разработка алгоритма, применимого для того-то  
+  \textbf{Целью} работы является решение какой-то проблемы %озвученной выше  
 
   \textbf{Задачи}:
   \begin{itemize}
+    \item Выбрать алгоритм, подход, метод %основываясь на проведённом анализе проблемы, области, существующих решений
     \item Разработать алгоритм, делающий то-то с тем-то
     \item Доказать корректность алгоритма
     \item Реализовать предложенный алгоритм
-    \item Провести апробацию
+    \item Провести эксериментальное исследование предложенной реализации 
   \end{itemize}
 \end{frame}
             
+%Идеально, если есть по одному слайду на каждую поставленую задачу            
+
+\begin{frame}
+  \frametitle{Алгоритм ABC\footnote{Результаты и обоснования выбора пути достижения цели}}
+  За основу решения взят алгоритм ABC
+  \begin{itemize}
+    \item Почему именно он, а не другие
+    \item Ключевые особенности выбранного алгоритма, важные для решения поставленных щадач    
+  \end{itemize}
+\end{frame}
+
+
 \begin{frame}[fragile]
-\frametitle{Иллюстративные возможности: таблицы, картинки, код}
+\frametitle{Новый алгоритм\footnote{Иллюстративные возможности: таблицы, картинки, код}}
 % Задается ширина столбцов
 \begin{tabular}{p{5cm} p{7cm}}
 % Фрагмент кода
@@ -132,10 +152,10 @@
 \\
 Аппроксимация: 
 &
-% Картинка
+% Картинка. Изображения должны быть векторными. Исключения --- снимки экрана.
 \multirow{-2}*{\!\includegraphics[width=6.8cm]{pictures/out3.pdf}}
 \\
-\includegraphics[width=3cm]{pictures/in3.pdf}
+\includegraphics[width=2.5cm]{pictures/in3.pdf}
 &
 \\      
 Грамматика: &
@@ -153,8 +173,10 @@ $$
 \end{tabular}
 \end{frame}
 
+
 \begin{frame}[fragile]
-  \frametitle{Формулировки теорем}
+  \frametitle{Доказательство корректности алгоритма}
+  {\tiny Формулировки утверждений. Идеи доказательств проговариваются устно.}
   \begin{rutheorem}[Пифагора: геометрическая формулировка]
     В прямоугольном треугольнике площадь квадрата, построенного на гипотенузе, равна сумме площадей квадратов, построенных на катетах.
   \end{rutheorem}
@@ -171,10 +193,30 @@ $$
   \end{rutheorem}  
 \end{frame}
 
+\begin{frame}[fragile]
+  \frametitle{Архитектура решения}
+  \begin{itemize}
+    \item В реализации интересны архитектура, библиотеки, инструменты
+    \item Не надо добавлять на слайд примеры кода
+  \end{itemize}
+  \begin{center}
+  \includegraphics[width=0.8\textwidth]{pictures/Activ_SEL_Processing.pdf}
+  \end{center}
+\end{frame}
+
 \begin{frame}[t]
   \frametitle{Экспериментальное исследование}
+  Постановка эксперимента
   \begin{itemize}
-    \item На каком множестве тестов проводилось экспериментальное исследование
+    \item На каком наборе данных проводилось экспериментальное исследование, почему были выбраны именно эти данные    
+    \item На каком обарудовании проводилось исследование    
+    \item Какие решения были выбраны для сравнения и почему
+  \end{itemize}  
+\end{frame}
+
+\begin{frame}[t]
+  \frametitle{Результаты экспериментального исследования}
+  \begin{itemize}  
     \item Какие результаты показало экспериментальное исследование
     \item Желательно привести графики, иллюстрирующие полученные результаты
     \begin{itemize}
