Поправлены некоторые опечатки.

--- a/presentation.tex
+++ b/presentation.tex
@@ -1,4 +1,7 @@
 \documentclass{beamer}
+%Для защит онлайн лучше использовать разрешение 16x9
+%\documentclass[aspectratio=169]{beamer}
+
 \usepackage{beamerthemesplit}
 \usepackage{wrapfig}
 \usetheme{SPbGU}
@@ -56,7 +59,7 @@
 {\scriptsize
   % У научного руководителя должна быть указана научная степень
    {\bfseries Научный руководитель:} к.ф.-м.н. А.А. Андреев, доцент кафедры системного программирования \\
-  % Крнсультанта может и не быть. Должна быть указана должность или ученая степень
+  % Консультанта может и не быть. Должна быть указана должность или ученая степень
    {\bfseries Консультант:}  П.П. Петров, программист ЗАО ``Компания с ну очень-очень-очень длинным названием''\\
   % Для курсовой не обязателен. Должна быть указана должность или ученая степень
    {\bfseries Рецензент:} д.т.н., проф. И.И. Иванов, исполнительный директор ООО ``Рога и копыта''  
@@ -116,18 +119,18 @@
     \item Разработать алгоритм, делающий то-то с тем-то
     \item Доказать корректность алгоритма
     \item Реализовать предложенный алгоритм
-    \item Провести эксериментальное исследование предложенной реализации 
+    \item Провести экспериментальное исследование предложенной реализации 
   \end{itemize}
 \end{frame}
             
-%Идеально, если есть по одному слайду на каждую поставленую задачу            
+%Идеально, если есть по одному слайду на каждую поставленную задачу            
 
 \begin{frame}
   \frametitle{Алгоритм ABC\footnote{Результаты и обоснования выбора пути достижения цели}}
   За основу решения взят алгоритм ABC
   \begin{itemize}
     \item Почему именно он, а не другие
-    \item Ключевые особенности выбранного алгоритма, важные для решения поставленных щадач    
+    \item Ключевые особенности выбранного алгоритма, важные для решения поставленных задач    
   \end{itemize}
 \end{frame}
 
@@ -209,7 +212,7 @@ $$
   Постановка эксперимента
   \begin{itemize}
     \item На каком наборе данных проводилось экспериментальное исследование, почему были выбраны именно эти данные    
-    \item На каком обарудовании проводилось исследование    
+    \item На каком оборудовании проводилось исследование    
     \item Какие решения были выбраны для сравнения и почему
   \end{itemize}  
 \end{frame}
@@ -234,11 +237,11 @@ $$
     \item Четкое отделение результатов своей работы (особенно для коллективных работ)
     \item Формулировать глаголами совершенного вида в прошедшем времени (``сделано'', ``получено'')
     \item Обсуждение (ограничения, валидность, альтернативы)
-    \item Не нужно слайдов типа ``Все'', ``Вопросы?'', ``Cпасибо за внимание''
+    \item Не нужно слайдов типа ``Все'', ``Вопросы?'', ``Спасибо за внимание''
   \end{itemize}
 
   \begin{itemize}
-    \item Если результаты были представлены на конференции и опубликованы, это желательно указать. 
+    \item Если результаты были представлены на конференции и опубликованы, это желательно указать 
   \end{itemize}
 \end{frame}
 
@@ -247,7 +250,7 @@ $$
 
 \begin{frame}
   \frametitle{Дополнительный слайд}
-  Например, с огромной страшной формулой всего, которяа нужна для пояснения деталей при ответе на частый вопрос
+  Например, с огромной страшной формулой всего, которая нужна для пояснения деталей при ответе на частый вопрос
   
 \begin{eqnarray*}
 \lefteqn{
@@ -262,8 +265,8 @@ $$
 \begin{frame}
   \frametitle{Второй дополнительный слайд}
 \begin{itemize}
-  \item Много дополнитеьных слайдов не надо: 1--2 вполне достатчно в большинстве случаев
-  \item Кроме формул здесь могут быть схемы, рисунки, таблицы и другие вспомогятельные материалы
+  \item Много дополнительных слайдов не надо: 1--2 вполне достаточно в большинстве случаев
+  \item Кроме формул здесь могут быть схемы, рисунки, таблицы и другие вспомогательные материалы
 \end{itemize}
 
   
