--- a/presentation.tex
+++ b/presentation.tex
@@ -2,32 +2,7 @@
 %Для защит онлайн лучше использовать разрешение 16x9
 %\documentclass[aspectratio=169]{beamer}
 
-\usepackage{beamerthemesplit}
-\usepackage{wrapfig}
-\usetheme{SPbGU}
-\usepackage{pdfpages}
-\usepackage{amsmath}
-\usepackage{cmap} 
-\usepackage[T2A]{fontenc} 
-\usepackage[utf8]{inputenc}
-\usepackage[english,russian]{babel}
-\usepackage{indentfirst}
-\usepackage{amsmath}
-\usepackage{tikz}
-\usepackage{multirow}
-\usepackage[noend]{algpseudocode}
-\usepackage{algorithm}
-\usepackage{algorithmicx}
-\usetikzlibrary{shapes,arrows}
-\usepackage{fancyvrb}
-\usepackage{appendixnumberbeamer}
-
-\newtheorem{rutheorem}{Теорема}
-\newtheorem{ruproof}{Доказательство}
-\newtheorem{rudefinition}{Определение}
-\newtheorem{rulemma}{Лемма}
-
-\beamertemplatenavigationsymbolsempty
+\input{preamble.tex}
 
 % То, что в квадратных скобках, отображается внизу по центру каждого слайда. 
 \title[Короткое название]{Полный официальный заголовок квалификационной работы}
