Fixes and improvements of existing supporting text
Now using correct russian quotes and up-to-date math features from
amsmath and mathtools. Also added new group format and added
non-breaking spaces before em dash

--- a/preamble.tex
+++ b/preamble.tex
@@ -17,6 +17,7 @@
 \usepackage{polyglossia}
 \setdefaultlanguage{russian}
 \setotherlanguage{english}
+\usepackage[autostyle]{csquotes} % Правильные кавычки в зависимости от языка
 
 %% Графика
 \usepackage{wrapfig} % Позволяет вставлять графику, обтекаемую текстом
