--- a/presentation.tex
+++ b/presentation.tex
@@ -11,7 +11,7 @@
 \institute[СПбГУ]{}
 
 % То, что в квадратных скобках, отображается в левом нижнем углу.
-\author[Василий Пупкин]{Василий Иванович Пупкин, 444 группа}
+\author[Василий Пупкин]{Василий Иванович Пупкин, группа ХХ.БХХ-мм}
  
 \begin{document}
 {
@@ -33,16 +33,16 @@
 
 {\scriptsize
   % У научного руководителя должна быть указана научная степень
-   {\bfseries Научный руководитель:} к.ф.-м.н. А.А. Андреев, доцент кафедры системного программирования \\
+   \textbf{Научный руководитель:} к.ф.-м.н. А.А. Андреев, доцент кафедры системного программирования \\
   % Консультанта может и не быть. Должна быть указана должность или ученая степень
-   {\bfseries Консультант:}  П.П. Петров, программист ЗАО ``Компания с ну очень-очень-очень длинным названием''\\
+   \textbf{Консультант:}  П.П. Петров, программист ЗАО \enquote{Компания с ну очень-очень-очень длинным названием}\\
   % Для курсовой не обязателен. Должна быть указана должность или ученая степень
-   {\bfseries Рецензент:} д.т.н., проф. И.И. Иванов, исполнительный директор ООО ``Рога и копыта''  
+   \textbf{Рецензент:} д.т.н., проф. И.И. Иванов, исполнительный директор ООО \enquote{Рога и копыта}  
  }
 \begin{center}
   \vspace{5pt}
   \scriptsize{Санкт-Петербург\\
-                 2016}
+                 2023}
   \end{center}
 
 \end{frame}
@@ -51,7 +51,7 @@
 \begin{frame}[fragile]  
   \frametitle{Введение}
   \begin{itemize}
-    \item Краткий обзор тематики работы (как вариант --- устно, пока показывается титульный слайд)
+    \item Краткий обзор тематики работы (как вариант~--- устно, пока показывается титульный слайд)
     \item Не нужно определять общеизвестные понятия
     \item Применимость/полезность данной работы, обоснование выбора именно этой темы 
     \item Если тема похожа на темы других работ (в том числе прошлых лет), надо явно описать разницу
@@ -140,13 +140,11 @@
 \\
 \vspace{-20pt}
 % Можно формулы писать
-$$
-\begin{array}{crcl}
-&start &::=& s \\
-&s & ::= & \mbox{\texttt{LBR }} s \mbox{\texttt{ RBR }} s\\
-&s & ::= &\epsilon
-\end{array}
-$$
+{\begin{align*}
+  start& & &\Coloneq & &s \\
+  s & & &\Coloneq & &\mbox{\texttt{LBR }} s \mbox{\texttt{ RBR }} s \\
+  s & & &\Coloneq & &\epsilon
+\end{align*}}
 & 
 \end{tabular}
 \end{frame}
@@ -167,7 +165,7 @@ $$
   \end{rutheorem}
 
   \begin{rutheorem}[Обратная теорема Пифагора]
-    Для всякой тройки положительных чисел a, b и c, такой, что $a^2 + b^2 = c^2$, существует прямоугольный треугольник с катетами a и b и гипотенузой c.
+    Для всякой тройки положительных чисел $a$, $b$ и $c$, такой, что $a^2 + b^2 = c^2$, существует прямоугольный треугольник с катетами $a$ и $b$ и гипотенузой $c$.
   \end{rutheorem}  
 \end{frame}
 
@@ -198,7 +196,7 @@ $$
     \item Какие результаты показало экспериментальное исследование
     \item Желательно привести графики, иллюстрирующие полученные результаты
     \begin{itemize}
-      \item У иллюстраций должны быть подписи, у графиков --- легенда, подписи к осям, например:
+      \item У иллюстраций должны быть подписи, у графиков~--- легенда, подписи к осям, например:
     \end{itemize}
   \end{itemize}
   \includegraphics[width=10cm]{pictures/dist.png}
@@ -208,11 +206,11 @@ $$
 \begin{frame}
   \frametitle{Результаты}
   \begin{itemize}
-    \item Практически то же, что и на слайде с постановкой задачи, но в совершенной форме --- что делал лично автор
+    \item Практически то же, что и на слайде с постановкой задачи, но в совершенной форме~--- что делал лично автор
     \item Четкое отделение результатов своей работы (особенно для коллективных работ)
-    \item Формулировать глаголами совершенного вида в прошедшем времени (``сделано'', ``получено'')
+      \item Формулировать глаголами совершенного вида в прошедшем времени (\enquote{сделано}, \enquote{получено})
     \item Обсуждение (ограничения, валидность, альтернативы)
-    \item Не нужно слайдов типа ``Все'', ``Вопросы?'', ``Спасибо за внимание''
+    \item Не нужно слайдов типа \enquote{Все}, \enquote{Вопросы?}, \enquote{Спасибо за внимание}
   \end{itemize}
 
   \begin{itemize}
@@ -227,14 +225,11 @@ $$
   \frametitle{Дополнительный слайд}
   Например, с огромной страшной формулой всего, которая нужна для пояснения деталей при ответе на частый вопрос
   
-\begin{eqnarray*}
-\lefteqn{
-\lim_{\bigtriangleup t \to 0^+}\int_{\bigtriangleup t}^{T} \! \int_{\Omega} \! D(t_1,x) \frac{\varphi(t_1-\bigtriangleup t,x)-\varphi(t_1,x)}{(-\bigtriangleup t)} \, \mathrm{d}x \, \mathrm{d}t_1 
-}\\
-&=&\lim_{\bigtriangleup t \to 0^+} \int_{0}^{T} \! \int_{\Omega} \! D(t_1,x) \frac{\varphi(t_1-\bigtriangleup t,x)-\varphi(t_1,x)}{(-\bigtriangleup t)} \chi_{(\bigtriangleup t,T)}(t_1) \, \mathrm{d}x \, \mathrm{d}t_1 
-\\
-&= &\int_{0}^{T} \! \int_{\Omega} \! D(t_1,x) \frac{\partial \varphi}{\partial t_1} (t_1,x) \, \mathrm{d}x \, \mathrm{d}t_1 .
-\end{eqnarray*}
+\begin{align*}
+  \MoveEqLeft \lim_{\bigtriangleup t \to 0^+}\int_{\bigtriangleup t}^{T} \! \int_{\Omega} \! D(t_1,x) \frac{\varphi(t_1-\bigtriangleup t,x)-\varphi(t_1,x)}{(-\bigtriangleup t)} \, \mathrm{d}x \, \mathrm{d}t_1 \\
+  &= \lim_{\bigtriangleup t \to 0^+} \int_{0}^{T} \! \int_{\Omega} \! D(t_1,x) \frac{\varphi(t_1-\bigtriangleup t,x)-\varphi(t_1,x)}{(-\bigtriangleup t)} \chi_{(\bigtriangleup t,T)}(t_1) \, \mathrm{d}x \, \mathrm{d}t_1 \\
+  &=\int_{0}^{T} \! \int_{\Omega} \! D(t_1,x) \frac{\partial \varphi}{\partial t_1} (t_1,x) \, \mathrm{d}x \, \mathrm{d}t_1 .
+\end{align*}
 \end{frame}
 
 \begin{frame}
