Add aminated example

--- a/presentation.tex
+++ b/presentation.tex
@@ -149,6 +149,29 @@
 \end{tabular}
 \end{frame}
 
+\begin{frame}
+  \frametitle{Анимация}
+  Для воспроизведения анимированных иллюстраций необходимо использовать просмотрщик PDF,
+  поддерживающий исполнение скриптов, например
+  \begin{itemize}
+    \item Adobe Acrobat Reader
+    \item Okular
+  \end{itemize}
+  \setlength{\fboxsep}{0pt}
+  \setlength{\fboxrule}{0.5pt}
+  \begin{figure}[h]
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \fbox{\animategraphics[autoplay, loop, scale=0.3]{7}{pictures/sensors/sensors-}{1}{26}}
+    \end{minipage}
+    % \hfill
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \fbox{\animategraphics[autoplay, loop, scale=0.3]{7}{pictures/encoders/encoders-}{1}{24}}
+    \end{minipage}
+    \caption{Сенсоры и энкодеры}
+  \end{figure}
+\end{frame}
 
 \begin{frame}[fragile]
   \frametitle{Доказательство корректности алгоритма}
@@ -239,7 +262,7 @@
   \item Кроме формул здесь могут быть схемы, рисунки, таблицы и другие вспомогательные материалы
 \end{itemize}
 
-  
+
 \end{frame}
 
 \end{document}
